# cpp_taskm_api

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Task.cpp  data.json
src/: Main.cpp  Task.cpp  TaskManager.cpp
test/: test.py
